# vdotool

./: .gitignore  DEMO_LAN.md  LICENSE  README.md  __init__.py  plugin.yaml  pyproject.toml  schemas.py  stack.py  tools.py  viewer.py  voice_config.py  watcher.py
scripts/: check_env_consistency.py  lint_js.sh  serve_lan_https.py  smoke_test.py  smoke_test_voice.py
skills/vdotool/: SKILL.md
vdo_ninja/: index.html  lib.js  main.js
vdo_ninja/vdotool/: README.md  capture.js  listener.js  speaker.js  start-capture.sh  writer.py
